archive/home-assistant/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: home-assistant
  name: home-assistant
  namespace: home-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-assistant
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      volumes:
        - name: ha-storage
          persistentVolumeClaim:
            claimName: home-assistant-data
        - name: ha-config
          configMap:
            name: home-assistant-config
        - name: home-assistant-automations
          configMap:
            name: home-assistant-automations
        - name: home-assistant-scripts
          configMap:
            name: home-assistant-scripts
        - name: home-assistant-scenes
          configMap:
            name: home-assistant-scenes
      containers:
        - name: home-assistant
          image: ghcr.io/home-assistant/home-assistant:stable
          resources: {}
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - NET_BROADCAST
          ports:
          - containerPort: 1900
            protocol: UDP
          - containerPort: 5353
            protocol: UDP
          - containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: ha-storage
            - mountPath: /config/configuration.yaml
              subPath: configuration.yaml
              name: ha-config
            - mountPath: /config/automations.yaml
              subPath: automations.yaml
              name: home-assistant-automations
            - mountPath: /config/scripts.yaml
              subPath: scripts.yaml
              name: home-assistant-scripts
            - mountPath: /config/scenes.yaml
              subPath: scenes.yaml
              name: home-assistant-scenes
        - name: tasmoadmin
          image: ghcr.io/tasmoadmin/tasmoadmin:v3.1.0
          resources: {}
          ports:
          - containerPort: 80
