archive/home-assistant/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: hassio.k8s.integratn.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: home-assistant-service
            port:
              number: 8123
  tls:
  - hosts:
    - hassio.k8s.integratn.tech
    secretName: home-assistant-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasmoadmin
  namespace: home-assistant
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
  - host: tasmoadmin.k8s.integratn.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tasmoadmin-service
            port:
              number: 80
  tls:
  - hosts:
    - tasmoadmin.k8s.integratn.tech
    secretName: tasmoadmin-tls
